--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "homepage": "https://github.com/markotom/columnify-wordpress",
   "devDependencies": {
     "grunt-wp-readme-to-markdown": "^0.8.0",
-    "grunt": "^0.4.5"
+    "grunt": "^0.4.5",
+    "grunt-release": "^0.7.0"
   }
 }
